@@ -57,7 +57,7 @@ for opt in opt_flags:
         print(' '.join(libs))
 
     elif opt == '--extension-suffix':
-        print(sysconfig.get_config_var('SO'))
+        print(sysconfig.get_config_var('EXT_SUFFIX'))
 
     elif opt == '--abiflags':
         print(sys.abiflags)
